@@ -6,6 +6,8 @@ Mark "*": bug fixed.
 Mark "!": change that can break compatibility with older version of the library
 ===============================================================================
 
+* [Printer] `Thurday' was printed instead of `Thursday'
+
 version 2.03, 2010-07-05:
 =========================
 o [Date] new function Date.precise_sub
